tests/fail/or_operator_returns_value.tig
while 0 | 1 do 0 | 1
